src/main/antlr4/.antlr/ConvCC20201Parser.java
// Generated from /home/marina/Documents/Compiladores/INE5426/src/main/antlr4/ConvCC20201.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConvCC20201Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, FOR=2, ELSE=3, RETURN=4, READ=5, PRINT=6, NEW=7, BREAK=8, DEF=9, 
		TYPE_STRING=10, TYPE_FLOAT=11, TYPE_INT=12, NULL=13, INT=14, FLOAT=15, 
		STRING=16, IDENT=17, LPAREN=18, RPAREN=19, LBRACE=20, RBRACE=21, LBRACK=22, 
		RBRACK=23, SEMI=24, COMMA=25, DOT=26, COLON=27, ASSIGN=28, ADD=29, SUB=30, 
		MUL=31, DIV=32, MOD=33, GT=34, LT=35, EQUAL=36, LE=37, GE=38, NOTEQUAL=39, 
		WHITESPACE=40;
	public static final int
		RULE_program = 0, RULE_funclist = 1, RULE_funclist2 = 2, RULE_funcdef = 3, 
		RULE_paramlist = 4, RULE_paramlist2 = 5, RULE_statement = 6, RULE_vardecl = 7, 
		RULE_a = 8, RULE_t1 = 9, RULE_atribstat = 10, RULE_atribstat1 = 11, RULE_atribstat2 = 12, 
		RULE_funcall = 13, RULE_paramlistcall = 14, RULE_paramlistcall2 = 15, 
		RULE_printstat = 16, RULE_readstat = 17, RULE_returnstat = 18, RULE_ifstat = 19, 
		RULE_ifstat2 = 20, RULE_forstat = 21, RULE_statelist = 22, RULE_statelist2 = 23, 
		RULE_allocexpression = 24, RULE_allocexpression1 = 25, RULE_b = 26, RULE_t2 = 27, 
		RULE_expression = 28, RULE_expression2 = 29, RULE_numexpression = 30, 
		RULE_c = 31, RULE_t3 = 32, RULE_term = 33, RULE_d = 34, RULE_t4 = 35, 
		RULE_unaryexpr = 36, RULE_factor = 37, RULE_lvalue = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "funclist", "funclist2", "funcdef", "paramlist", "paramlist2", 
			"statement", "vardecl", "a", "t1", "atribstat", "atribstat1", "atribstat2", 
			"funcall", "paramlistcall", "paramlistcall2", "printstat", "readstat", 
			"returnstat", "ifstat", "ifstat2", "forstat", "statelist", "statelist2", 
			"allocexpression", "allocexpression1", "b", "t2", "expression", "expression2", 
			"numexpression", "c", "t3", "term", "d", "t4", "unaryexpr", "factor", 
			"lvalue"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'if'", "'for'", "'else'", "'return'", "'read'", "'print'", "'new'", 
			"'break'", "'def'", "'string'", "'float'", "'int'", "'null'", null, null, 
			null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
			"':'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", "'<'", "'=='", 
			"'<='", "'>='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "FOR", "ELSE", "RETURN", "READ", "PRINT", "NEW", "BREAK", 
			"DEF", "TYPE_STRING", "TYPE_FLOAT", "TYPE_INT", "NULL", "INT", "FLOAT", 
			"STRING", "IDENT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
			"RBRACK", "SEMI", "COMMA", "DOT", "COLON", "ASSIGN", "ADD", "SUB", "MUL", 
			"DIV", "MOD", "GT", "LT", "EQUAL", "LE", "GE", "NOTEQUAL", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ConvCC20201.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ConvCC20201Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IF:
			case FOR:
			case RETURN:
			case READ:
			case PRINT:
			case BREAK:
			case TYPE_STRING:
			case TYPE_FLOAT:
			case TYPE_INT:
			case IDENT:
			case LBRACE:
			case SEMI:
				{
				setState(78);
				statement();
				}
				break;
			case DEF:
				{
				setState(79);
				funclist();
				}
				break;
			case EOF:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunclistContext extends ParserRuleContext {
		public FuncdefContext funcdef() {
			return getRuleContext(FuncdefContext.class,0);
		}
		public Funclist2Context funclist2() {
			return getRuleContext(Funclist2Context.class,0);
		}
		public FunclistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist; }
	}

	public final FunclistContext funclist() throws RecognitionException {
		FunclistContext _localctx = new FunclistContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_funclist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			funcdef();
			setState(83);
			funclist2();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Funclist2Context extends ParserRuleContext {
		public FunclistContext funclist() {
			return getRuleContext(FunclistContext.class,0);
		}
		public Funclist2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funclist2; }
	}

	public final Funclist2Context funclist2() throws RecognitionException {
		Funclist2Context _localctx = new Funclist2Context(_ctx, getState());
		enterRule(_localctx, 4, RULE_funclist2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DEF) {
				{
				setState(85);
				funclist();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncdefContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(ConvCC20201Parser.DEF, 0); }
		public TerminalNode IDENT() { return getToken(ConvCC20201Parser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(ConvCC20201Parser.LPAREN, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ConvCC20201Parser.RPAREN, 0); }
		public TerminalNode LBRACE() { return getToken(ConvCC20201Parser.LBRACE, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ConvCC20201Parser.RBRACE, 0); }
		public FuncdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcdef; }
	}

	public final FuncdefContext funcdef() throws RecognitionException {
		FuncdefContext _localctx = new FuncdefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(DEF);
			setState(89);
			match(IDENT);
			setState(90);
			match(LPAREN);
			setState(91);
			paramlist();
			setState(92);
			match(RPAREN);
			setState(93);
			match(LBRACE);
			setState(94);
			statelist();
			setState(95);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistContext extends ParserRuleContext {
		public TerminalNode TYPE_INT() { return getToken(ConvCC20201Parser.TYPE_INT, 0); }
		public TerminalNode IDENT() { return getToken(ConvCC20201Parser.IDENT, 0); }
		public Paramlist2Context paramlist2() {
			return getRuleContext(Paramlist2Context.class,0);
		}
		public TerminalNode TYPE_FLOAT() { return getToken(ConvCC20201Parser.TYPE_FLOAT, 0); }
		public TerminalNode TYPE_STRING() { return getToken(ConvCC20201Parser.TYPE_STRING, 0); }
		public ParamlistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist; }
	}

	public final ParamlistContext paramlist() throws RecognitionException {
		ParamlistContext _localctx = new ParamlistContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_paramlist);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_INT:
				{
				setState(97);
				match(TYPE_INT);
				setState(98);
				match(IDENT);
				setState(99);
				paramlist2();
				}
				break;
			case TYPE_FLOAT:
				{
				setState(100);
				match(TYPE_FLOAT);
				setState(101);
				match(IDENT);
				setState(102);
				paramlist2();
				}
				break;
			case TYPE_STRING:
				{
				setState(103);
				match(TYPE_STRING);
				setState(104);
				match(IDENT);
				setState(105);
				paramlist2();
				}
				break;
			case RPAREN:
				break;
			default:
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paramlist2Context extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(ConvCC20201Parser.COMMA, 0); }
		public ParamlistContext paramlist() {
			return getRuleContext(ParamlistContext.class,0);
		}
		public Paramlist2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlist2; }
	}

	public final Paramlist2Context paramlist2() throws RecognitionException {
		Paramlist2Context _localctx = new Paramlist2Context(_ctx, getState());
		enterRule(_localctx, 10, RULE_paramlist2);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==COMMA) {
				{
				setState(108);
				match(COMMA);
				setState(109);
				paramlist();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public VardeclContext vardecl() {
			return getRuleContext(VardeclContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ConvCC20201Parser.SEMI, 0); }
		public AtribstatContext atribstat() {
			return getRuleContext(AtribstatContext.class,0);
		}
		public PrintstatContext printstat() {
			return getRuleContext(PrintstatContext.class,0);
		}
		public ReadstatContext readstat() {
			return getRuleContext(ReadstatContext.class,0);
		}
		public ReturnstatContext returnstat() {
			return getRuleContext(ReturnstatContext.class,0);
		}
		public IfstatContext ifstat() {
			return getRuleContext(IfstatContext.class,0);
		}
		public ForstatContext forstat() {
			return getRuleContext(ForstatContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(ConvCC20201Parser.LBRACE, 0); }
		public StatelistContext statelist() {
			return getRuleContext(StatelistContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(ConvCC20201Parser.RBRACE, 0); }
		public TerminalNode BREAK() { return getToken(ConvCC20201Parser.BREAK, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_statement);
		try {
			setState(136);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_STRING:
			case TYPE_FLOAT:
			case TYPE_INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				vardecl();
				setState(113);
				match(SEMI);
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				atribstat();
				setState(116);
				match(SEMI);
				}
				break;
			case PRINT:
				enterOuterAlt(_localctx, 3);
				{
				setState(118);
				printstat();
				setState(119);
				match(SEMI);
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 4);
				{
				setState(121);
				readstat();
				setState(122);
				match(SEMI);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 5);
				{
				setState(124);
				returnstat();
				setState(125);
				match(SEMI);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 6);
				{
				setState(127);
				ifstat();
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 7);
				{
				setState(128);
				forstat();
				}
				break;
			case LBRACE:
				enterOuterAlt(_localctx, 8);
				{
				setState(129);
				match(LBRACE);
				setState(130);
				statelist();
				setState(131);
				match(RBRACE);
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 9);
				{
				setState(133);
				match(BREAK);
				setState(134);
				match(SEMI);
				}
				break;
			case SEMI:
				enterOuterAlt(_localctx, 10);
				{
				setState(135);
				match(SEMI);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VardeclContext extends ParserRuleContext {
		public TerminalNode TYPE_INT() { return getToken(ConvCC20201Parser.TYPE_INT, 0); }
		public TerminalNode IDENT() { return getToken(ConvCC20201Parser.IDENT, 0); }
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public TerminalNode TYPE_FLOAT() { return getToken(ConvCC20201Parser.TYPE_FLOAT, 0); }
		public TerminalNode TYPE_STRING() { return getToken(ConvCC20201Parser.TYPE_STRING, 0); }
		public VardeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vardecl; }
	}

	public final VardeclContext vardecl() throws RecognitionException {
		VardeclContext _localctx = new VardeclContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_vardecl);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TYPE_INT:
				enterOuterAlt(_localctx, 1);
				{
				setState(138);
				match(TYPE_INT);
				setState(139);
				match(IDENT);
				setState(140);
				a();
				}
				break;
			case TYPE_FLOAT:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(TYPE_FLOAT);
				setState(142);
				match(IDENT);
				setState(143);
				a();
				}
				break;
			case TYPE_STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(144);
				match(TYPE_STRING);
				setState(145);
				match(IDENT);
				setState(146);
				a();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AContext extends ParserRuleContext {
		public T1Context t1() {
			return getRuleContext(T1Context.class,0);
		}
		public AContext a() {
			return getRuleContext(AContext.class,0);
		}
		public AContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a; }
	}

	public final AContext a() throws RecognitionException {
		AContext _localctx = new AContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_a);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(152);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LBRACK) {
				{
				setState(149);
				t1();
				setState(150);
				a();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class T1Context extends ParserRuleContext {
		public TerminalNode LBRACK() { return getToken(ConvCC20201Parser.LBRACK, 0); }
		public TerminalNode TYPE_INT() { return getToken(ConvCC20201Parser.TYPE_INT, 0); }
		public TerminalNode RBRACK() { return getToken(ConvCC20201Parser.RBRACK, 0); }
		public T1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_t1; }
	}

	public final T1Context t1() throws RecognitionException {
		T1Context _localctx = new T1Context(_ctx, getState());
		enterRule(_localctx, 18, RULE_t1);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			match(LBRACK);
			setState(155);
			match(TYPE_INT);
			setState(156);
			match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtribstatContext extends ParserRuleContext {
		public LvalueContext lvalue() {
			return getRuleContext(LvalueContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(ConvCC20201Parser.SEMI, 0); }
		public AtribstatContext atribstat() {
			return getRuleContext(AtribstatContext.class,0);
		}
		public AtribstatContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat; }
	}

	public final AtribstatContext atribstat() throws RecognitionException {
		AtribstatContext _localctx = new AtribstatContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_atribstat);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			lvalue();
			setState(159);
			match(SEMI);
			setState(160);
			atribstat();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atribstat1Context extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ConvCC20201Parser.IDENT, 0); }
		public Atribstat2Context atribstat2() {
			return getRuleContext(Atribstat2Context.class,0);
		}
		public AllocexpressionContext allocexpression() {
			return getRuleContext(AllocexpressionContext.class,0);
		}
		public TerminalNode ADD() { return getToken(ConvCC20201Parser.ADD, 0); }
		public FactorContext factor() {
			return getRuleContext(FactorContext.class,0);
		}
		public TerminalNode SUB() { return getToken(ConvCC20201Parser.SUB, 0); }
		public TerminalNode TYPE_INT() { return getToken(ConvCC20201Parser.TYPE_INT, 0); }
		public TerminalNode TYPE_FLOAT() { return getToken(ConvCC20201Parser.TYPE_FLOAT, 0); }
		public TerminalNode TYPE_STRING() { return getToken(ConvCC20201Parser.TYPE_STRING, 0); }
		public TerminalNode NULL() { return getToken(ConvCC20201Parser.NULL, 0); }
		public TerminalNode LPAREN() { return getToken(ConvCC20201Parser.LPAREN, 0); }
		public NumexpressionContext numexpression() {
			return getRuleContext(NumexpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ConvCC20201Parser.RPAREN, 0); }
		public Atribstat1Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat1; }
	}

	public final Atribstat1Context atribstat1() throws RecognitionException {
		Atribstat1Context _localctx = new Atribstat1Context(_ctx, getState());
		enterRule(_localctx, 22, RULE_atribstat1);
		try {
			setState(177);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				match(IDENT);
				setState(163);
				atribstat2();
				}
				break;
			case NEW:
				enterOuterAlt(_localctx, 2);
				{
				setState(164);
				allocexpression();
				}
				break;
			case ADD:
				enterOuterAlt(_localctx, 3);
				{
				setState(165);
				match(ADD);
				setState(166);
				factor();
				}
				break;
			case SUB:
				enterOuterAlt(_localctx, 4);
				{
				setState(167);
				match(SUB);
				setState(168);
				factor();
				}
				break;
			case TYPE_INT:
				enterOuterAlt(_localctx, 5);
				{
				setState(169);
				match(TYPE_INT);
				}
				break;
			case TYPE_FLOAT:
				enterOuterAlt(_localctx, 6);
				{
				setState(170);
				match(TYPE_FLOAT);
				}
				break;
			case TYPE_STRING:
				enterOuterAlt(_localctx, 7);
				{
				setState(171);
				match(TYPE_STRING);
				}
				break;
			case NULL:
				enterOuterAlt(_localctx, 8);
				{
				setState(172);
				match(NULL);
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 9);
				{
				setState(173);
				match(LPAREN);
				setState(174);
				numexpression();
				setState(175);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atribstat2Context extends ParserRuleContext {
		public BContext b() {
			return getRuleContext(BContext.class,0);
		}
		public DContext d() {
			return getRuleContext(DContext.class,0);
		}
		public CContext c() {
			return getRuleContext(CContext.class,0);
		}
		public Expression2Context expression2() {
			return getRuleContext(Expression2Context.class,0);
		}
		public TerminalNode LPAREN() { return getToken(ConvCC20201Parser.LPAREN, 0); }
		public ParamlistcallContext paramlistcall() {
			return getRuleContext(ParamlistcallContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ConvCC20201Parser.RPAREN, 0); }
		public Atribstat2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atribstat2; }
	}

	public final Atribstat2Context atribstat2() throws RecognitionException {
		Atribstat2Context _localctx = new Atribstat2Context(_ctx, getState());
		enterRule(_localctx, 24, RULE_atribstat2);
		try {
			setState(188);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case EOF:
			case LBRACK:
			case ADD:
			case SUB:
			case MUL:
			case DIV:
			case MOD:
			case GT:
			case LT:
			case EQUAL:
			case LE:
			case GE:
			case NOTEQUAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(179);
				b();
				setState(180);
				d();
				setState(181);
				c();
				setState(182);
				expression2();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(184);
				match(LPAREN);
				setState(185);
				paramlistcall();
				setState(186);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FuncallContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ConvCC20201Parser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(ConvCC20201Parser.LPAREN, 0); }
		public ParamlistcallContext paramlistcall() {
			return getRuleContext(ParamlistcallContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ConvCC20201Parser.RPAREN, 0); }
		public FuncallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcall; }
	}

	public final FuncallContext funcall() throws RecognitionException {
		FuncallContext _localctx = new FuncallContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_funcall);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(IDENT);
			setState(191);
			match(LPAREN);
			setState(192);
			paramlistcall();
			setState(193);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamlistcallContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(ConvCC20201Parser.IDENT, 0); }
		public Paramlistcall2Context paramlistcall2() {
			return getRuleContext(Paramlistcall2Context.class,0);
		}
		public ParamlistcallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlistcall; }
	}

	public final ParamlistcallContext paramlistcall() throws RecognitionException {
		ParamlistcallContext _localctx = new ParamlistcallContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_paramlistcall);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(195);
				match(IDENT);
				setState(196);
				paramlistcall2();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Paramlistcall2Context extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(ConvCC20201Parser.COMMA, 0); }
		public ParamlistcallContext paramlistcall() {
			return getRuleContext(ParamlistcallContext.class,0);
		}
		public Paramlistcall2Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_paramlistcall2; }
	}
